--- a/styles.css
+++ b/styles.css
@@ -389,7 +389,7 @@
         to bottom,
         rgba(0,0,0,0) 0%, 
         rgba(17,17,17,0.6) 100%), 
-    url('https://github.com/JohnReed25/JTRiRacing/images/EaglemanSwim.jpg');
+    url('images/EaglemanSwim.jpg');
     background-size: cover;
     position: relative;
     color: #fff;
@@ -400,7 +400,7 @@
         to bottom,
         rgba(0,0,0,0) 0%,
         rgba(17,17,17,0.6) 100%),
-    url('https://github.com/JohnReed25/JTRiRacing/images/run.png');
+    url('images/run.png');
 }
 
 .services h2 {
