--- a/stylesabout.css
+++ b/stylesabout.css
@@ -359,6 +359,26 @@
     height: flex;
 }
 
+.picture__container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+@media screen and (mad-width: 960px) {
+    .picture {
+        height: 1600px;
+    }
+
+}
+
+@media screen and (max-width: 480px) {
+    .picture {
+        height: 1400px;
+    }
+
+}
+
 /* Footer CSS */
 
 .footer__container {
