--- a/stylesabout.css
+++ b/stylesabout.css
@@ -316,7 +316,7 @@
         overflow-y: auto; /* Enable vertical scrolling */
         -webkit-overflow-scrolling: touch; /* Smooth scrolling for iOS devices */
         padding: 16px; /* Optional padding for better spacing */
-        text-align: justify;
+        text-align: center;
         margin-bottom: 4rem;
 
     }
