--- a/stylesabout.css
+++ b/stylesabout.css
@@ -291,6 +291,7 @@
 .main__img--container {
     text-align: center;
     height: flex;
+    display: flex
 }
 
 #main__img {
@@ -308,7 +309,7 @@
         justify-self: center;
         width: 100%;
         margin: 0 auto;
-        height: 90vh;
+        height: flex;
     }
 
     .main__content {
