--- a/stylesabout.css
+++ b/stylesabout.css
@@ -313,8 +313,8 @@
     }
 
     .main__content {
-        height: flex; /* Viewport height */
-        overflow-y: auto; /* Enable vertical scrolling */
+        /*height: flex; Viewport height */
+        /* overflow-y: auto; Enable vertical scrolling */
         /* -webkit-overflow-scrolling: touch; Smooth scrolling for iOS devices */
         text-align: center;
         margin-bottom: 4rem;
@@ -331,8 +331,8 @@
     }
 
     .main__content p {
-        height: 100vh; /* Viewport height */
-        overflow-y: auto; /* Enable vertical scrolling */
+        /* height: 100vh; Viewport height */
+        /* overflow-y: auto; Enable vertical scrolling */
         /*-webkit-overflow-scrolling: touch; Smooth scrolling for iOS devices */
         margin-top: 1rem;
         font-size: 1.5rem;
@@ -350,8 +350,8 @@
     }
 
     .main__content p {
-        height: flex; /* Viewport height */
-        overflow-y: auto; /* Enable vertical scrolling */
+        /* height: flex; Viewport height */
+        /* overflow-y: auto; nable vertical scrolling */
         margin-top: 2rem;
         font-size: 1.5rem;
     }
