--- a/styles.css
+++ b/styles.css
@@ -435,7 +435,7 @@
     cursor: pointer;
 }
 
-@media screen and (mad-width: 960px) {
+@media screen and (max-width: 960px) {
     .services {
         height: 1600px;
     }
