--- a/stylesabout.css
+++ b/stylesabout.css
@@ -361,7 +361,7 @@
         margin: 2.5rem 0;
     }
 }
-/* Picture Section CSS */
+/* Picture Section CSS 
 
 .picture {
     background: #000;
@@ -385,7 +385,7 @@
     }
 
 }
-
+*/
 /* Footer CSS */
 
 .footer__container {
