--- a/stylesabout.css
+++ b/stylesabout.css
@@ -298,7 +298,7 @@
 
 /* Mobile Responsive */
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 768px) {
     .main__container{
         display: grid;
         grid-template-columns: auto;
@@ -306,7 +306,7 @@
         justify-self: center;
         width: 100%;
         margin: 0 auto;
-        height: 90vh;
+        height: flex;
     }
 
     .main__content {
