--- a/stylesabout.css
+++ b/stylesabout.css
@@ -306,7 +306,7 @@
         justify-self: center;
         width: 100%;
         margin: 0 auto;
-        height: flex;
+        height: 180vh;
     }
 
     .main__content {
