--- a/stylesabout.css
+++ b/stylesabout.css
@@ -42,6 +42,7 @@
     text-decoration: none;
     font-size: 2rem;
 }
+
 .fa-gem {
     margin-right: 0.5rem;
 }
@@ -238,9 +239,8 @@
 }
 
 .main__content p{
-    height: flex;
     margin-top: 1rem;
-    font-size: 1rem;
+    font-size: 2rem;
     font-weight: 700;
     color: #fff;
 }
@@ -292,8 +292,8 @@
 }
 
 #main__img {
-    height: 60%;
-    width: 60%;
+    height: 80%;
+    width: 80%;
 }
 
 /* Mobile Responsive */
@@ -306,7 +306,7 @@
         justify-self: center;
         width: 100%;
         margin: 0 auto;
-        height: 180vh;
+        height: 90vh;
     }
 
     .main__content {
@@ -351,6 +351,33 @@
     }
 }
 
+/*
+
+@media screen and (max-width: 960px) {
+    .services {
+        height: 1600px;
+    }
+
+    .services h1 {
+        font-size: 2rem;
+        margin-top: 12rem;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .services {
+        height: 1400px;
+    }
+
+    .services h1 {
+        font-size: 1.2rem;
+    }
+
+    .services__card {
+        width: 300px;
+    }
+}
+*/
 /* Footer CSS */
 
 .footer__container {
