--- a/stylesabout.css
+++ b/stylesabout.css
@@ -203,7 +203,8 @@
 }
 
 .main__container {
-    display: grid;
+    display: flex;
+    flex-direction: column;
     grid-template-columns: 1fr 1fr;
     align-items: center;
     justify-self: center;
@@ -293,8 +294,8 @@
 }
 
 #main__img {
-    height: 80%;
-    width: 80%;
+    height: 70%;
+    width: 70%;
 }
 
 /* Mobile Responsive */
