--- a/stylesabout.css
+++ b/stylesabout.css
@@ -203,8 +203,7 @@
 }
 
 .main__container {
-    display: flex;
-    flex-direction: column;
+    display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
     justify-self: center;
